// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Component of SETMENU admin renders correctly 1`] = `
<div
  className=""
>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Select meals to set todays menu
  </h4>
  <table
    className="table"
    style={
      Object {
        "margin": "10px 10% 10px 7%",
        "width": "90%",
      }
    }
  >
    <tbody>
      <tr
        className="tr tr-color tr-height"
      >
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Select
        </th>
      </tr>
      <tr
        className="tr tr tr-height"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <input
            className="checkbox"
            id="rice"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr
        className="tr tr tr-height"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <input
            className="checkbox"
            id="beans"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className=""
  >
     
    <button
      className="setMenuBtn"
      onClick={[Function]}
    >
       
      Set Menu
       
    </button>
     
  </div>
  <br />
  <br />
  <div
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <a
      activePage={1}
      firstPageText="«"
      getPageUrl={[Function]}
      hideFirstLastPages={false}
      innerClass="pagination"
      itemsCountPerPage={6}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={4}
      prevPageText="⟨"
      totalItemsCount={NaN}
    />
  </div>
</div>
`;

exports[`Test Component of SETMENU admin should call addMenu method onclick event 1`] = `
<div
  className=""
>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      >
        Title is required
      </span>
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Select meals to set todays menu
  </h4>
  <table
    className="table"
    style={
      Object {
        "margin": "10px 10% 10px 7%",
        "width": "90%",
      }
    }
  >
    <tbody>
      <tr
        className="tr tr-color tr-height"
      >
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Select
        </th>
      </tr>
      <tr
        className="tr tr tr-height"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <input
            checked={true}
            className="checkbox"
            id="rice"
            onClick={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr
        className="tr tr tr-height"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <input
            className="checkbox"
            id="beans"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className=""
  >
     
    <button
      className="setMenuBtn"
      onClick={[Function]}
    >
       
      Set Menu
       
    </button>
     
  </div>
  <br />
  <br />
  <div
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <a
      activePage={1}
      firstPageText="«"
      getPageUrl={[Function]}
      hideFirstLastPages={false}
      innerClass="pagination"
      itemsCountPerPage={6}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={4}
      prevPageText="⟨"
      totalItemsCount={NaN}
    />
  </div>
</div>
`;

exports[`Test Component of SETMENU admin should respond to a click event by dispalying a modal when caterer want to set menu by selecting a meal 1`] = `
<div
  className=""
>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Select meals to set todays menu
  </h4>
  <table
    className="table"
    style={
      Object {
        "margin": "10px 10% 10px 7%",
        "width": "90%",
      }
    }
  >
    <tbody>
      <tr
        className="tr tr-color tr-height"
      >
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Select
        </th>
      </tr>
      <tr
        className="tr tr tr-height"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <input
            className="checkbox"
            id="rice"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr
        className="tr tr tr-height"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <input
            className="checkbox"
            id="beans"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className=""
  >
     
    <button
      className="setMenuBtn"
      onClick={[Function]}
    >
       
      Set Menu
       
    </button>
     
  </div>
  <br />
  <br />
  <div
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <a
      activePage={1}
      firstPageText="«"
      getPageUrl={[Function]}
      hideFirstLastPages={false}
      innerClass="pagination"
      itemsCountPerPage={6}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={4}
      prevPageText="⟨"
      totalItemsCount={NaN}
    />
  </div>
</div>
`;

exports[`Test Component of SETMENU admin should respond to change event and change the state of the title input and expire time and add meal to the menu 1`] = `
<div
  className=""
>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Select meals to set todays menu
  </h4>
  <table
    className="table"
    style={
      Object {
        "margin": "10px 10% 10px 7%",
        "width": "90%",
      }
    }
  >
    <tbody>
      <tr
        className="tr tr-color tr-height"
      >
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Select
        </th>
      </tr>
      <tr
        className="tr tr tr-height"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <input
            className="checkbox"
            id="rice"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr
        className="tr tr tr-height"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <input
            className="checkbox"
            id="beans"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className=""
  >
     
    <button
      className="setMenuBtn"
      onClick={[Function]}
    >
       
      Set Menu
       
    </button>
     
  </div>
  <br />
  <br />
  <div
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <a
      activePage={1}
      firstPageText="«"
      getPageUrl={[Function]}
      hideFirstLastPages={false}
      innerClass="pagination"
      itemsCountPerPage={6}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={4}
      prevPageText="⟨"
      totalItemsCount={NaN}
    />
  </div>
</div>
`;

exports[`Test Component of SETMENU admin should respond to change event and change the state of the title input and return error while addMeal method when orderBefore field is not supplied 1`] = `
<div
  className=""
>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Select meals to set todays menu
  </h4>
  <table
    className="table"
    style={
      Object {
        "margin": "10px 10% 10px 7%",
        "width": "90%",
      }
    }
  >
    <tbody>
      <tr
        className="tr tr-color tr-height"
      >
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Select
        </th>
      </tr>
      <tr
        className="tr tr tr-height"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <input
            className="checkbox"
            id="rice"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr
        className="tr tr tr-height"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <input
            className="checkbox"
            id="beans"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className=""
  >
     
    <button
      className="setMenuBtn"
      onClick={[Function]}
    >
       
      Set Menu
       
    </button>
     
  </div>
  <br />
  <br />
  <div
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <a
      activePage={1}
      firstPageText="«"
      getPageUrl={[Function]}
      hideFirstLastPages={false}
      innerClass="pagination"
      itemsCountPerPage={6}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={4}
      prevPageText="⟨"
      totalItemsCount={NaN}
    />
  </div>
</div>
`;

exports[`Test Component of SETMENU admin should respond to mapDispatchToProps methods 1`] = `
Object {
  "actions": Object {
    "changePassword": [Function],
    "clearMessages": [Function],
    "getNotifications": [Function],
    "getUser": [Function],
    "loadErrorMessage": [Function],
    "loadNotifications": [Function],
    "loadSuccessMessage": [Function],
    "loadUser": [Function],
    "login": [Function],
    "refreshToken": [Function],
    "register": [Function],
    "resetLink": [Function],
    "updateProfile": [Function],
    "upgrade": [Function],
  },
  "mealActions": Object {
    "createMeal": [Function],
    "deleteMeal": [Function],
    "getAllMeals": [Function],
    "loadAllMeals": [Function],
    "loadErrorMessage": [Function],
    "loadMostOrdered": [Function],
    "loadMostOrderedMeal": [Function],
    "loadSuccessMessage": [Function],
    "updateMeal": [Function],
  },
  "menuActions": Object {
    "addMealToCart": [Function],
    "addToCart": [Function],
    "clearMenuMeals": [Function],
    "getMenu": [Function],
    "getMenuMeals": [Function],
    "loadErrorMessage": [Function],
    "loadSuccessMessage": [Function],
    "loadTodayMenu": [Function],
    "loadTodayMenuMeals": [Function],
    "setMenu": [Function],
  },
}
`;

exports[`Test Component of SETMENU admin should respond to mapStateToProps methods 1`] = `
Object {
  "errorMessage": Object {
    "createMealError": "Wrong credentials",
  },
  "meals": Object {
    "rows": Array [
      Object {
        "descrption": "Very delicious",
        "id": 1,
        "name": "rice",
        "price": "200",
      },
      Object {
        "descrption": "Very delicious",
        "id": 2,
        "name": "beans",
        "price": "200",
      },
    ],
  },
  "successMessage": Object {
    "createMealSuccess": "meal created",
  },
}
`;

exports[`Test Component of SETMENU admin should should respond to lifeCycle Methods 1`] = `
<div
  className=""
>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Select meals to set todays menu
  </h4>
  <table
    className="table"
    style={
      Object {
        "margin": "10px 10% 10px 7%",
        "width": "90%",
      }
    }
  >
    <tbody>
      <tr
        className="tr tr-color tr-height"
      >
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Select
        </th>
      </tr>
      <tr
        className="tr tr tr-height"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <input
            className="checkbox"
            id="rice"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr
        className="tr tr tr-height"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <input
            className="checkbox"
            id="beans"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className=""
  >
     
    <button
      className="setMenuBtn"
      onClick={[Function]}
    >
       
      Set Menu
       
    </button>
     
  </div>
  <br />
  <br />
  <div
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <a
      activePage={1}
      firstPageText="«"
      getPageUrl={[Function]}
      hideFirstLastPages={false}
      innerClass="pagination"
      itemsCountPerPage={6}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={4}
      prevPageText="⟨"
      totalItemsCount={NaN}
    />
  </div>
</div>
`;

exports[`Test Component of SETMENU admin should should respond to lifeCycle Methods 2`] = `
<div
  className=""
>
  <h2
    style={
      Object {
        "marginTop": "2rem",
      }
    }
  >
    SET MENU FOR THE DAY
  </h2>
  <h4
    className="p-color text-center"
  >
    Enter Menu Title and the Expire Time(24 Hours Format) in Hours
  </h4>
  <h5
    className="p-color text-center"
  >
    Eg Expire time of 17 
    <em
      className="fa fa-long-arrow-right"
    />
     5pm
  </h5>
  <h4
    className="danger text-center"
  />
  <h4
    className="danger text-center"
  />
  <h4
    className="y-color text-center"
  />
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="name"
    >
      Title 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Keny"
      required={true}
      type="text"
    />
  </div>
  <div
    className="form-field"
    id="setMenu-forrm"
  >
    <label
      htmlFor="password"
    >
      Expire Time 
      <br />
      <span
        className="text-center danger"
      />
    </label>
    <input
      id="expire"
      name="orderBefore"
      onChange={[Function]}
      required={true}
      type="number"
    />
  </div>
  <h4
    className="p-color text-center"
  >
    Select meals to set todays menu
  </h4>
  <table
    className="table"
    style={
      Object {
        "margin": "10px 10% 10px 7%",
        "width": "90%",
      }
    }
  >
    <tbody>
      <tr
        className="tr tr-color tr-height"
      >
        <th>
          Name
        </th>
        <th>
          Price ($)
        </th>
        <th>
          Select
        </th>
      </tr>
      <tr
        className="tr tr tr-height"
        key="1"
      >
        <td>
          rice
        </td>
        <td>
          200
        </td>
        <td>
          <input
            className="checkbox"
            id="rice"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
      <tr
        className="tr tr tr-height"
        key="2"
      >
        <td>
          beans
        </td>
        <td>
          200
        </td>
        <td>
          <input
            className="checkbox"
            id="beans"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className=""
  >
     
    <button
      className="setMenuBtn"
      onClick={[Function]}
    >
       
      Set Menu
       
    </button>
     
  </div>
  <br />
  <br />
  <div
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <a
      activePage={1}
      firstPageText="«"
      getPageUrl={[Function]}
      hideFirstLastPages={false}
      innerClass="pagination"
      itemsCountPerPage={6}
      lastPageText="»"
      nextPageText="⟩"
      onChange={[Function]}
      pageRangeDisplayed={4}
      prevPageText="⟨"
      totalItemsCount={NaN}
    />
  </div>
</div>
`;
